Add update sale use case